--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
-
+.card{
+    width: 60%;
+}
 label{
     margin: 15px 0;
+}
+
+.form-btn{
+    width: 35%;
+}
+
+.search-field{
+    width: 50%;
+    margin: auto;
 }
 
 .table td{
@@ -20,4 +31,22 @@ span{
     margin: 5px 0;
     transition: all 0.6s ease-in-out;
     display: none;
+}
+
+@media screen and (max-width:740px){
+    .card{
+        width: 100%;
+    }
+
+    .form-btn{
+        width: 100%;
+    }
+
+    .search-field{
+        width: 100%;
+    }
+
+    .table-container{
+        overflow: scroll;
+    }
 }
